@startuml database-entity-relationship
!theme plain

title LemonQwest App - Database Entity Relationship Diagram (v1, 2025-07)

!define ENTITY entity

ENTITY User {
  * id : String (UUID) <<PK>>
  --
  * name : String
  * role : String (CHILD, CAREGIVER, ADMIN)
  * tokenBalance : Int
  * level : Int (default: 1)
  * experiencePoints : Int (default: 0)
  --
  familyId : String <<FK>>
  pinHash : String (nullable, BCrypt)
  email : String (nullable)
  age : Int (nullable)
  avatar : String (nullable)
  themePreference : String (nullable)
  accessibilitySettings : String (nullable, JSON)
  languagePreference : String (nullable)
  privacyConsent : Boolean (default: false)
  coppaConsent : Boolean (default: false)
  lastLoginAt : Long (nullable)
  isActive : Boolean (default: true)
  --
  * createdAt : Long (timestamp)
}

ENTITY Family {
  * id : String (UUID) <<PK>>
  --
  * name : String
  * adminUserId : String <<FK>>
  settings : String (JSON, family-wide settings)
  parentalControls : String (JSON, COPPA/child safety)
  --
  * createdAt : Long (timestamp)
  * updatedAt : Long (timestamp)
}

ENTITY FamilyMembership {
  * id : String (UUID) <<PK>>
  --
  * familyId : String <<FK>>
  * userId : String <<FK>>
  * role : String (ADMIN, PARENT, CHILD)
  permissions : String (JSON, specific permissions)
  childAccessRights : String (JSON, children this user can manage)
  --
  * joinedAt : Long (timestamp)
}

ENTITY Task {
  * id : String (UUID) <<PK>>
  --
  * title : String
  * category : String (PersonalCare, HouseholdChores, Homework, SocialSkills, Exercise, Creative, Other)
  * difficulty : String (EASY, MEDIUM, HARD, EXPERT)
  * tokenReward : Int (calculated based on difficulty)
  privacyFlag : Boolean (default: false)
  --
  assignedToUserId : String <<FK>>
  completedByUserId : String <<FK>>
  completedAt : Long (nullable)
  isActive : Boolean (default: true)
  --
  * createdAt : Long (timestamp)
}

ENTITY Reward {
  * id : String (UUID) <<PK>>
  --
  * name : String
  * cost : Int
  * category : String (Physical, Digital, Experience, Other)
  * isActive : Boolean (default: true)
  auditTrail : String (JSON, redemption history)
  --
  * createdAt : Long (timestamp)
}

ENTITY Achievement {
  * id : String (UUID) <<PK>>
  --
  * name : String
  * description : String
  * unlockedByUserId : String <<FK>>
  * unlockedAt : Long (timestamp)
  * tokenAward : Int
  auditTrail : String (JSON, unlock history)
}

User ||--o{ FamilyMembership : "memberships"
Family ||--o{ FamilyMembership : "members"
User ||--o{ Task : "tasks"
User ||--o{ Reward : "rewards"
User ||--o{ Achievement : "achievements"
Task ||--o{ Reward : "rewardsForTask"

@enduml
